test/regress/simd/simd_load_splat.bin.wast
(module binary
  "\00\61\73\6d\01\00\00\00\01\86\80\80\80\00\01\60"
  "\01\7f\01\7b\03\9d\80\80\80\00\1c\00\00\00\00\00"
  "\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00"
  "\00\00\00\00\00\00\00\05\83\80\80\80\00\01\00\01"
  "\07\b4\84\80\80\00\1c\10\76\31\32\38\2e\6c\6f\61"
  "\64\38\5f\73\70\6c\61\74\00\00\11\76\31\32\38\2e"
  "\6c\6f\61\64\31\36\5f\73\70\6c\61\74\00\01\11\76"
  "\31\32\38\2e\6c\6f\61\64\33\32\5f\73\70\6c\61\74"
  "\00\02\11\76\31\32\38\2e\6c\6f\61\64\36\34\5f\73"
  "\70\6c\61\74\00\03\0d\76\38\78\31\36\2e\6f\66\66"
  "\73\65\74\30\00\04\0c\76\38\78\31\36\2e\61\6c\69"
  "\67\6e\31\00\05\14\76\38\78\31\36\2e\6f\66\66\73"
  "\65\74\31\5f\61\6c\69\67\6e\31\00\06\14\76\38\78"
  "\31\36\2e\6f\66\66\73\65\74\32\5f\61\6c\69\67\6e"
  "\31\00\07\15\76\38\78\31\36\2e\6f\66\66\73\65\74"
  "\31\35\5f\61\6c\69\67\6e\31\00\08\0d\76\31\36\78"
  "\38\2e\6f\66\66\73\65\74\30\00\09\0c\76\31\36\78"
  "\38\2e\61\6c\69\67\6e\31\00\0a\14\76\31\36\78\38"
  "\2e\6f\66\66\73\65\74\31\5f\61\6c\69\67\6e\31\00"
  "\0b\14\76\31\36\78\38\2e\6f\66\66\73\65\74\32\5f"
  "\61\6c\69\67\6e\31\00\0c\15\76\31\36\78\38\2e\6f"
  "\66\66\73\65\74\31\35\5f\61\6c\69\67\6e\32\00\0d"
  "\0d\76\33\32\78\34\2e\6f\66\66\73\65\74\30\00\0e"
  "\0c\76\33\32\78\34\2e\61\6c\69\67\6e\31\00\0f\14"
  "\76\33\32\78\34\2e\6f\66\66\73\65\74\31\5f\61\6c"
  "\69\67\6e\31\00\10\14\76\33\32\78\34\2e\6f\66\66"
  "\73\65\74\32\5f\61\6c\69\67\6e\32\00\11\15\76\33"
  "\32\78\34\2e\6f\66\66\73\65\74\31\35\5f\61\6c\69"
  "\67\6e\34\00\12\0d\76\36\34\78\32\2e\6f\66\66\73"
  "\65\74\30\00\13\0c\76\36\34\78\32\2e\61\6c\69\67"
  "\6e\31\00\14\14\76\36\34\78\32\2e\6f\66\66\73\65"
  "\74\31\5f\61\6c\69\67\6e\32\00\15\14\76\36\34\78"
  "\32\2e\6f\66\66\73\65\74\32\5f\61\6c\69\67\6e\34"
  "\00\16\15\76\36\34\78\32\2e\6f\66\66\73\65\74\31"
  "\35\5f\61\6c\69\67\6e\38\00\17\11\76\38\78\31\36"
  "\2e\6f\66\66\73\65\74\36\35\35\33\36\00\18\11\76"
  "\31\36\78\38\2e\6f\66\66\73\65\74\36\35\35\33\35"
  "\00\19\11\76\33\32\78\34\2e\6f\66\66\73\65\74\36"
  "\35\35\33\33\00\1a\11\76\36\34\78\32\2e\6f\66\66"
  "\73\65\74\36\35\35\32\39\00\1b\0a\f5\82\80\80\00"
  "\1c\88\80\80\80\00\00\20\00\fd\07\00\00\0b\88\80"
  "\80\80\00\00\20\00\fd\08\01\00\0b\88\80\80\80\00"
  "\00\20\00\fd\09\02\00\0b\88\80\80\80\00\00\20\00"
  "\fd\0a\03\00\0b\88\80\80\80\00\00\20\00\fd\07\00"
  "\00\0b\88\80\80\80\00\00\20\00\fd\07\00\00\0b\88"
  "\80\80\80\00\00\20\00\fd\07\00\01\0b\88\80\80\80"
  "\00\00\20\00\fd\07\00\02\0b\88\80\80\80\00\00\20"
  "\00\fd\07\00\0f\0b\88\80\80\80\00\00\20\00\fd\08"
  "\01\00\0b\88\80\80\80\00\00\20\00\fd\08\00\00\0b"
  "\88\80\80\80\00\00\20\00\fd\08\00\01\0b\88\80\80"
  "\80\00\00\20\00\fd\08\00\02\0b\88\80\80\80\00\00"
  "\20\00\fd\08\01\0f\0b\88\80\80\80\00\00\20\00\fd"
  "\09\02\00\0b\88\80\80\80\00\00\20\00\fd\09\00\00"
  "\0b\88\80\80\80\00\00\20\00\fd\09\00\01\0b\88\80"
  "\80\80\00\00\20\00\fd\09\01\02\0b\88\80\80\80\00"
  "\00\20\00\fd\09\02\0f\0b\88\80\80\80\00\00\20\00"
  "\fd\0a\03\00\0b\88\80\80\80\00\00\20\00\fd\0a\00"
  "\00\0b\88\80\80\80\00\00\20\00\fd\0a\01\01\0b\88"
  "\80\80\80\00\00\20\00\fd\0a\02\02\0b\88\80\80\80"
  "\00\00\20\00\fd\0a\03\0f\0b\8a\80\80\80\00\00\20"
  "\00\fd\07\00\80\80\04\0b\8a\80\80\80\00\00\20\00"
  "\fd\08\01\ff\ff\03\0b\8a\80\80\80\00\00\20\00\fd"
  "\09\02\fd\ff\03\0b\8a\80\80\80\00\00\20\00\fd\0a"
  "\03\f9\ff\03\0b\0b\ad\80\80\80\00\02\00\41\00\0b"
  "\10\00\01\02\03\04\05\06\07\08\09\0a\0b\0c\0d\0e"
  "\0f\00\41\f0\ff\03\0b\10\10\11\12\13\14\15\16\17"
  "\18\19\1a\1b\1c\1d\1e\1f"
)
(assert_return
  (invoke "v128.load8_splat" (i32.const 0x0))
  (v128.const i8x16
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
  )
)
(assert_return
  (invoke "v128.load8_splat" (i32.const 0x1))
  (v128.const i8x16
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
  )
)
(assert_return
  (invoke "v128.load8_splat" (i32.const 0x2))
  (v128.const i8x16
    0x2
    0x2
    0x2
    0x2
    0x2
    0x2
    0x2
    0x2
    0x2
    0x2
    0x2
    0x2
    0x2
    0x2
    0x2
    0x2
  )
)
(assert_return
  (invoke "v128.load8_splat" (i32.const 0x3))
  (v128.const i8x16
    0x3
    0x3
    0x3
    0x3
    0x3
    0x3
    0x3
    0x3
    0x3
    0x3
    0x3
    0x3
    0x3
    0x3
    0x3
    0x3
  )
)
(assert_return
  (invoke "v128.load8_splat" (i32.const 0xffff))
  (v128.const i8x16
    0x1f
    0x1f
    0x1f
    0x1f
    0x1f
    0x1f
    0x1f
    0x1f
    0x1f
    0x1f
    0x1f
    0x1f
    0x1f
    0x1f
    0x1f
    0x1f
  )
)
(assert_return
  (invoke "v128.load16_splat" (i32.const 0x4))
  (v128.const i16x8 0x504 0x504 0x504 0x504 0x504 0x504 0x504 0x504)
)
(assert_return
  (invoke "v128.load16_splat" (i32.const 0x5))
  (v128.const i16x8 0x605 0x605 0x605 0x605 0x605 0x605 0x605 0x605)
)
(assert_return
  (invoke "v128.load16_splat" (i32.const 0x6))
  (v128.const i16x8 0x706 0x706 0x706 0x706 0x706 0x706 0x706 0x706)
)
(assert_return
  (invoke "v128.load16_splat" (i32.const 0x7))
  (v128.const i16x8 0x807 0x807 0x807 0x807 0x807 0x807 0x807 0x807)
)
(assert_return
  (invoke "v128.load16_splat" (i32.const 0xfffe))
  (v128.const i16x8 0x1f1e 0x1f1e 0x1f1e 0x1f1e 0x1f1e 0x1f1e 0x1f1e 0x1f1e)
)
(assert_return
  (invoke "v128.load32_splat" (i32.const 0x8))
  (v128.const i32x4 0xb0a_0908 0xb0a_0908 0xb0a_0908 0xb0a_0908)
)
(assert_return
  (invoke "v128.load32_splat" (i32.const 0x9))
  (v128.const i32x4 0xc0b_0a09 0xc0b_0a09 0xc0b_0a09 0xc0b_0a09)
)
(assert_return
  (invoke "v128.load32_splat" (i32.const 0xa))
  (v128.const i32x4 0xd0c_0b0a 0xd0c_0b0a 0xd0c_0b0a 0xd0c_0b0a)
)
(assert_return
  (invoke "v128.load32_splat" (i32.const 0xb))
  (v128.const i32x4 0xe0d_0c0b 0xe0d_0c0b 0xe0d_0c0b 0xe0d_0c0b)
)
(assert_return
  (invoke "v128.load32_splat" (i32.const 0xfffc))
  (v128.const i32x4 0x1f1e_1d1c 0x1f1e_1d1c 0x1f1e_1d1c 0x1f1e_1d1c)
)
(assert_return
  (invoke "v128.load64_splat" (i32.const 0xc))
  (v128.const i64x2 0xf0e_0d0c 0xf0e_0d0c)
)
(assert_return
  (invoke "v128.load64_splat" (i32.const 0xd))
  (v128.const i64x2 0xf_0e0d 0xf_0e0d)
)
(assert_return
  (invoke "v128.load64_splat" (i32.const 0xe))
  (v128.const i64x2 0xf0e 0xf0e)
)
(assert_return
  (invoke "v128.load64_splat" (i32.const 0xf))
  (v128.const i64x2 0xf 0xf)
)
(assert_return
  (invoke "v128.load64_splat" (i32.const 0xfff8))
  (v128.const i64x2 0x1f1e_1d1c_1b1a_1918 0x1f1e_1d1c_1b1a_1918)
)
(assert_return
  (invoke "v8x16.offset0" (i32.const 0x0))
  (v128.const i8x16
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
  )
)
(assert_return
  (invoke "v8x16.align1" (i32.const 0x0))
  (v128.const i8x16
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
  )
)
(assert_return
  (invoke "v8x16.offset1_align1" (i32.const 0x0))
  (v128.const i8x16
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
  )
)
(assert_return
  (invoke "v8x16.offset2_align1" (i32.const 0x0))
  (v128.const i8x16
    0x2
    0x2
    0x2
    0x2
    0x2
    0x2
    0x2
    0x2
    0x2
    0x2
    0x2
    0x2
    0x2
    0x2
    0x2
    0x2
  )
)
(assert_return
  (invoke "v8x16.offset15_align1" (i32.const 0x0))
  (v128.const i8x16
    0xf
    0xf
    0xf
    0xf
    0xf
    0xf
    0xf
    0xf
    0xf
    0xf
    0xf
    0xf
    0xf
    0xf
    0xf
    0xf
  )
)
(assert_return
  (invoke "v8x16.offset0" (i32.const 0x1))
  (v128.const i8x16
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
  )
)
(assert_return
  (invoke "v8x16.align1" (i32.const 0x1))
  (v128.const i8x16
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
    0x1
  )
)
(assert_return
  (invoke "v8x16.offset1_align1" (i32.const 0x1))
  (v128.const i8x16
    0x2
    0x2
    0x2
    0x2
    0x2
    0x2
    0x2
    0x2
    0x2
    0x2
    0x2
    0x2
    0x2
    0x2
    0x2
    0x2
  )
)
(assert_return
  (invoke "v8x16.offset2_align1" (i32.const 0x1))
  (v128.const i8x16
    0x3
    0x3
    0x3
    0x3
    0x3
    0x3
    0x3
    0x3
    0x3
    0x3
    0x3
    0x3
    0x3
    0x3
    0x3
    0x3
  )
)
(assert_return
  (invoke "v8x16.offset15_align1" (i32.const 0x1))
  (v128.const i8x16
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
  )
)
(assert_return
  (invoke "v8x16.offset0" (i32.const 0xffff))
  (v128.const i8x16
    0x1f
    0x1f
    0x1f
    0x1f
    0x1f
    0x1f
    0x1f
    0x1f
    0x1f
    0x1f
    0x1f
    0x1f
    0x1f
    0x1f
    0x1f
    0x1f
  )
)
(assert_return
  (invoke "v8x16.align1" (i32.const 0xffff))
  (v128.const i8x16
    0x1f
    0x1f
    0x1f
    0x1f
    0x1f
    0x1f
    0x1f
    0x1f
    0x1f
    0x1f
    0x1f
    0x1f
    0x1f
    0x1f
    0x1f
    0x1f
  )
)
(assert_return
  (invoke "v16x8.offset0" (i32.const 0x0))
  (v128.const i16x8 0x100 0x100 0x100 0x100 0x100 0x100 0x100 0x100)
)
(assert_return
  (invoke "v16x8.align1" (i32.const 0x0))
  (v128.const i16x8 0x100 0x100 0x100 0x100 0x100 0x100 0x100 0x100)
)
(assert_return
  (invoke "v16x8.offset1_align1" (i32.const 0x0))
  (v128.const i16x8 0x201 0x201 0x201 0x201 0x201 0x201 0x201 0x201)
)
(assert_return
  (invoke "v16x8.offset2_align1" (i32.const 0x0))
  (v128.const i16x8 0x302 0x302 0x302 0x302 0x302 0x302 0x302 0x302)
)
(assert_return
  (invoke "v16x8.offset15_align2" (i32.const 0x0))
  (v128.const i16x8 0xf 0xf 0xf 0xf 0xf 0xf 0xf 0xf)
)
(assert_return
  (invoke "v16x8.offset0" (i32.const 0x1))
  (v128.const i16x8 0x201 0x201 0x201 0x201 0x201 0x201 0x201 0x201)
)
(assert_return
  (invoke "v16x8.align1" (i32.const 0x1))
  (v128.const i16x8 0x201 0x201 0x201 0x201 0x201 0x201 0x201 0x201)
)
(assert_return
  (invoke "v16x8.offset1_align1" (i32.const 0x1))
  (v128.const i16x8 0x302 0x302 0x302 0x302 0x302 0x302 0x302 0x302)
)
(assert_return
  (invoke "v16x8.offset2_align1" (i32.const 0x1))
  (v128.const i16x8 0x403 0x403 0x403 0x403 0x403 0x403 0x403 0x403)
)
(assert_return
  (invoke "v16x8.offset15_align2" (i32.const 0x1))
  (v128.const i16x8 0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0)
)
(assert_return
  (invoke "v16x8.offset0" (i32.const 0xfffe))
  (v128.const i16x8 0x1f1e 0x1f1e 0x1f1e 0x1f1e 0x1f1e 0x1f1e 0x1f1e 0x1f1e)
)
(assert_return
  (invoke "v16x8.align1" (i32.const 0xfffe))
  (v128.const i16x8 0x1f1e 0x1f1e 0x1f1e 0x1f1e 0x1f1e 0x1f1e 0x1f1e 0x1f1e)
)
(assert_return
  (invoke "v32x4.offset0" (i32.const 0x0))
  (v128.const i32x4 0x302_0100 0x302_0100 0x302_0100 0x302_0100)
)
(assert_return
  (invoke "v32x4.align1" (i32.const 0x0))
  (v128.const i32x4 0x302_0100 0x302_0100 0x302_0100 0x302_0100)
)
(assert_return
  (invoke "v32x4.offset1_align1" (i32.const 0x0))
  (v128.const i32x4 0x403_0201 0x403_0201 0x403_0201 0x403_0201)
)
(assert_return
  (invoke "v32x4.offset2_align2" (i32.const 0x0))
  (v128.const i32x4 0x504_0302 0x504_0302 0x504_0302 0x504_0302)
)
(assert_return
  (invoke "v32x4.offset15_align4" (i32.const 0x0))
  (v128.const i32x4 0xf 0xf 0xf 0xf)
)
(assert_return
  (invoke "v32x4.offset0" (i32.const 0x1))
  (v128.const i32x4 0x403_0201 0x403_0201 0x403_0201 0x403_0201)
)
(assert_return
  (invoke "v32x4.align1" (i32.const 0x1))
  (v128.const i32x4 0x403_0201 0x403_0201 0x403_0201 0x403_0201)
)
(assert_return
  (invoke "v32x4.offset1_align1" (i32.const 0x1))
  (v128.const i32x4 0x504_0302 0x504_0302 0x504_0302 0x504_0302)
)
(assert_return
  (invoke "v32x4.offset2_align2" (i32.const 0x1))
  (v128.const i32x4 0x605_0403 0x605_0403 0x605_0403 0x605_0403)
)
(assert_return
  (invoke "v32x4.offset15_align4" (i32.const 0x1))
  (v128.const i32x4 0x0 0x0 0x0 0x0)
)
(assert_return
  (invoke "v32x4.offset0" (i32.const 0xfffc))
  (v128.const i32x4 0x1f1e_1d1c 0x1f1e_1d1c 0x1f1e_1d1c 0x1f1e_1d1c)
)
(assert_return
  (invoke "v32x4.align1" (i32.const 0xfffc))
  (v128.const i32x4 0x1f1e_1d1c 0x1f1e_1d1c 0x1f1e_1d1c 0x1f1e_1d1c)
)
(assert_return
  (invoke "v64x2.offset0" (i32.const 0x0))
  (v128.const i64x2 0x706_0504_0302_0100 0x706_0504_0302_0100)
)
(assert_return
  (invoke "v64x2.align1" (i32.const 0x0))
  (v128.const i64x2 0x706_0504_0302_0100 0x706_0504_0302_0100)
)
(assert_return
  (invoke "v64x2.offset1_align2" (i32.const 0x0))
  (v128.const i64x2 0x807_0605_0403_0201 0x807_0605_0403_0201)
)
(assert_return
  (invoke "v64x2.offset2_align4" (i32.const 0x0))
  (v128.const i64x2 0x908_0706_0504_0302 0x908_0706_0504_0302)
)
(assert_return
  (invoke "v64x2.offset15_align8" (i32.const 0x0))
  (v128.const i64x2 0xf 0xf)
)
(assert_return
  (invoke "v64x2.offset0" (i32.const 0x1))
  (v128.const i64x2 0x807_0605_0403_0201 0x807_0605_0403_0201)
)
(assert_return
  (invoke "v64x2.align1" (i32.const 0x1))
  (v128.const i64x2 0x807_0605_0403_0201 0x807_0605_0403_0201)
)
(assert_return
  (invoke "v64x2.offset1_align2" (i32.const 0x1))
  (v128.const i64x2 0x908_0706_0504_0302 0x908_0706_0504_0302)
)
(assert_return
  (invoke "v64x2.offset2_align4" (i32.const 0x1))
  (v128.const i64x2 0xa09_0807_0605_0403 0xa09_0807_0605_0403)
)
(assert_return
  (invoke "v64x2.offset15_align8" (i32.const 0x1))
  (v128.const i64x2 0x0 0x0)
)
(assert_return
  (invoke "v64x2.offset0" (i32.const 0xfff8))
  (v128.const i64x2 0x1f1e_1d1c_1b1a_1918 0x1f1e_1d1c_1b1a_1918)
)
(assert_return
  (invoke "v64x2.align1" (i32.const 0xfff8))
  (v128.const i64x2 0x1f1e_1d1c_1b1a_1918 0x1f1e_1d1c_1b1a_1918)
)
(assert_trap
  (invoke "v128.load8_splat" (i32.const 0xffff_ffff))
  "out of bounds memory access"
)
(assert_trap
  (invoke "v128.load16_splat" (i32.const 0xffff_ffff))
  "out of bounds memory access"
)
(assert_trap
  (invoke "v128.load32_splat" (i32.const 0xffff_ffff))
  "out of bounds memory access"
)
(assert_trap
  (invoke "v128.load64_splat" (i32.const 0xffff_ffff))
  "out of bounds memory access"
)
(assert_trap
  (invoke "v128.load8_splat" (i32.const 0x1_0000))
  "out of bounds memory access"
)
(assert_trap
  (invoke "v128.load16_splat" (i32.const 0xffff))
  "out of bounds memory access"
)
(assert_trap
  (invoke "v128.load32_splat" (i32.const 0xfffd))
  "out of bounds memory access"
)
(assert_trap
  (invoke "v128.load64_splat" (i32.const 0xfff9))
  "out of bounds memory access"
)
(assert_trap
  (invoke "v8x16.offset1_align1" (i32.const 0xffff))
  "out of bounds memory access"
)
(assert_trap
  (invoke "v8x16.offset2_align1" (i32.const 0xffff))
  "out of bounds memory access"
)
(assert_trap
  (invoke "v8x16.offset15_align1" (i32.const 0xffff))
  "out of bounds memory access"
)
(assert_trap
  (invoke "v16x8.offset1_align1" (i32.const 0xfffe))
  "out of bounds memory access"
)
(assert_trap
  (invoke "v16x8.offset2_align1" (i32.const 0xfffe))
  "out of bounds memory access"
)
(assert_trap
  (invoke "v16x8.offset15_align2" (i32.const 0xfffe))
  "out of bounds memory access"
)
(assert_trap
  (invoke "v32x4.offset1_align1" (i32.const 0xfffc))
  "out of bounds memory access"
)
(assert_trap
  (invoke "v32x4.offset2_align2" (i32.const 0xfffc))
  "out of bounds memory access"
)
(assert_trap
  (invoke "v32x4.offset15_align4" (i32.const 0xfffc))
  "out of bounds memory access"
)
(assert_trap
  (invoke "v64x2.offset1_align2" (i32.const 0xfff8))
  "out of bounds memory access"
)
(assert_trap
  (invoke "v64x2.offset2_align4" (i32.const 0xfff8))
  "out of bounds memory access"
)
(assert_trap
  (invoke "v64x2.offset15_align8" (i32.const 0xfff8))
  "out of bounds memory access"
)
(assert_trap
  (invoke "v8x16.offset1_align1" (i32.const 0xffff_ffff))
  "out of bounds memory access"
)
(assert_trap
  (invoke "v16x8.offset1_align1" (i32.const 0xffff_ffff))
  "out of bounds memory access"
)
(assert_trap
  (invoke "v32x4.offset1_align1" (i32.const 0xffff_ffff))
  "out of bounds memory access"
)
(assert_trap
  (invoke "v64x2.offset1_align2" (i32.const 0xffff_ffff))
  "out of bounds memory access"
)
(assert_trap
  (invoke "v8x16.offset65536" (i32.const 0x0))
  "out of bounds memory access"
)
(assert_trap
  (invoke "v16x8.offset65535" (i32.const 0x0))
  "out of bounds memory access"
)
(assert_trap
  (invoke "v32x4.offset65533" (i32.const 0x0))
  "out of bounds memory access"
)
(assert_trap
  (invoke "v64x2.offset65529" (i32.const 0x0))
  "out of bounds memory access"
)
(assert_trap
  (invoke "v8x16.offset65536" (i32.const 0x1))
  "out of bounds memory access"
)
(assert_trap
  (invoke "v16x8.offset65535" (i32.const 0x1))
  "out of bounds memory access"
)
(assert_trap
  (invoke "v32x4.offset65533" (i32.const 0x1))
  "out of bounds memory access"
)
(assert_trap
  (invoke "v64x2.offset65529" (i32.const 0x1))
  "out of bounds memory access"
)
(module binary
  "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\60"
  "\00\01\7b\60\00\01\7f\03\8d\80\80\80\00\0c\00\00"
  "\00\00\00\00\00\00\01\01\01\01\05\83\80\80\80\00"
  "\01\00\01\07\9e\83\80\80\00\0c\19\76\31\32\38\2e"
  "\6c\6f\61\64\38\5f\73\70\6c\61\74\2d\69\6e\2d\62"
  "\6c\6f\63\6b\00\00\1a\76\31\32\38\2e\6c\6f\61\64"
  "\31\36\5f\73\70\6c\61\74\2d\69\6e\2d\62\6c\6f\63"
  "\6b\00\01\1a\76\31\32\38\2e\6c\6f\61\64\33\32\5f"
  "\73\70\6c\61\74\2d\69\6e\2d\62\6c\6f\63\6b\00\02"
  "\1a\76\31\32\38\2e\6c\6f\61\64\36\34\5f\73\70\6c"
  "\61\74\2d\69\6e\2d\62\6c\6f\63\6b\00\03\1c\76\31"
  "\32\38\2e\6c\6f\61\64\38\5f\73\70\6c\61\74\2d\61"
  "\73\2d\62\72\2d\76\61\6c\75\65\00\04\1d\76\31\32"
  "\38\2e\6c\6f\61\64\31\36\5f\73\70\6c\61\74\2d\61"
  "\73\2d\62\72\2d\76\61\6c\75\65\00\05\1d\76\31\32"
  "\38\2e\6c\6f\61\64\33\32\5f\73\70\6c\61\74\2d\61"
  "\73\2d\62\72\2d\76\61\6c\75\65\00\06\1d\76\31\32"
  "\38\2e\6c\6f\61\64\36\34\5f\73\70\6c\61\74\2d\61"
  "\73\2d\62\72\2d\76\61\6c\75\65\00\07\27\76\31\32"
  "\38\2e\6c\6f\61\64\38\5f\73\70\6c\61\74\2d\65\78"
  "\74\72\61\63\74\5f\6c\61\6e\65\5f\73\2d\6f\70\65"
  "\72\61\6e\64\00\08\28\76\31\32\38\2e\6c\6f\61\64"
  "\31\36\5f\73\70\6c\61\74\2d\65\78\74\72\61\63\74"
  "\5f\6c\61\6e\65\5f\73\2d\6f\70\65\72\61\6e\64\00"
  "\09\28\76\31\32\38\2e\6c\6f\61\64\33\32\5f\73\70"
  "\6c\61\74\2d\65\78\74\72\61\63\74\5f\6c\61\6e\65"
  "\5f\73\2d\6f\70\65\72\61\6e\64\00\0a\28\76\31\32"
  "\38\2e\6c\6f\61\64\36\34\5f\73\70\6c\61\74\2d\65"
  "\78\74\72\61\63\74\5f\6c\61\6e\65\5f\73\2d\6f\70"
  "\65\72\61\6e\64\00\0b\0a\d5\81\80\80\00\0c\8e\80"
  "\80\80\00\00\02\7b\02\7b\41\00\fd\07\00\00\0b\0b"
  "\0b\8e\80\80\80\00\00\02\7b\02\7b\41\01\fd\08\01"
  "\00\0b\0b\0b\8e\80\80\80\00\00\02\7b\02\7b\41\02"
  "\fd\09\02\00\0b\0b\0b\8e\80\80\80\00\00\02\7b\02"
  "\7b\41\09\fd\0a\03\00\0b\0b\0b\8d\80\80\80\00\00"
  "\02\7b\41\03\fd\07\00\00\0c\00\0b\0b\8d\80\80\80"
  "\00\00\02\7b\41\04\fd\08\01\00\0c\00\0b\0b\8d\80"
  "\80\80\00\00\02\7b\41\05\fd\09\02\00\0c\00\0b\0b"
  "\8d\80\80\80\00\00\02\7b\41\0a\fd\0a\03\00\0c\00"
  "\0b\0b\8b\80\80\80\00\00\41\06\fd\07\00\00\fd\15"
  "\00\0b\8b\80\80\80\00\00\41\07\fd\08\01\00\fd\15"
  "\00\0b\8b\80\80\80\00\00\41\08\fd\09\02\00\fd\15"
  "\00\0b\8b\80\80\80\00\00\41\0b\fd\0a\03\00\fd\15"
  "\00\0b\0b\91\80\80\80\00\01\00\41\00\0b\0b\00\01"
  "\02\03\04\05\06\07\08\09\0a"
)
(assert_return
  (invoke "v128.load8_splat-in-block")
  (v128.const i8x16
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
    0x0
  )
)
(assert_return
  (invoke "v128.load16_splat-in-block")
  (v128.const i16x8 0x201 0x201 0x201 0x201 0x201 0x201 0x201 0x201)
)
(assert_return
  (invoke "v128.load32_splat-in-block")
  (v128.const i32x4 0x504_0302 0x504_0302 0x504_0302 0x504_0302)
)
(assert_return
  (invoke "v128.load64_splat-in-block")
  (v128.const i64x2 0xa09 0xa09)
)
(assert_return
  (invoke "v128.load8_splat-as-br-value")
  (v128.const i8x16
    0x3
    0x3
    0x3
    0x3
    0x3
    0x3
    0x3
    0x3
    0x3
    0x3
    0x3
    0x3
    0x3
    0x3
    0x3
    0x3
  )
)
(assert_return
  (invoke "v128.load16_splat-as-br-value")
  (v128.const i16x8 0x504 0x504 0x504 0x504 0x504 0x504 0x504 0x504)
)
(assert_return
  (invoke "v128.load32_splat-as-br-value")
  (v128.const i32x4 0x807_0605 0x807_0605 0x807_0605 0x807_0605)
)
(assert_return
  (invoke "v128.load64_splat-as-br-value")
  (v128.const i64x2 0xa 0xa)
)
(assert_return
  (invoke "v128.load8_splat-extract_lane_s-operand")
  (i32.const 0x6)
)
(assert_return
  (invoke "v128.load16_splat-extract_lane_s-operand")
  (i32.const 0x7)
)
(assert_return
  (invoke "v128.load32_splat-extract_lane_s-operand")
  (i32.const 0x8)
)
(assert_return
  (invoke "v128.load64_splat-extract_lane_s-operand")
  (i32.const 0x0)
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7b\03\82\80\80\80\00\01\00\05\83\80\80\80"
    "\00\01\00\00\0a\9e\80\80\80\00\01\98\80\80\80\00"
    "\00\fd\0c\00\00\00\00\00\00\00\00\00\00\00\00\00"
    "\00\00\00\fd\07\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7b\03\82\80\80\80\00\01\00\05\83\80\80\80"
    "\00\01\00\00\0a\9e\80\80\80\00\01\98\80\80\80\00"
    "\00\fd\0c\00\00\00\00\00\00\00\00\00\00\00\00\00"
    "\00\00\00\fd\08\01\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7b\03\82\80\80\80\00\01\00\05\83\80\80\80"
    "\00\01\00\00\0a\9e\80\80\80\00\01\98\80\80\80\00"
    "\00\fd\0c\00\00\00\00\00\00\00\00\00\00\00\00\00"
    "\00\00\00\fd\09\02\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7b\03\82\80\80\80\00\01\00\05\83\80\80\80"
    "\00\01\00\00\0a\9e\80\80\80\00\01\98\80\80\80\00"
    "\00\fd\0c\00\00\00\00\00\00\00\00\00\00\00\00\00"
    "\00\00\00\fd\0a\03\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7b\03\82\80\80\80\00\01\00\05\83\80\80\80"
    "\00\01\00\00\0a\8c\80\80\80\00\01\86\80\80\80\00"
    "\00\fd\07\00\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7b\03\82\80\80\80\00\01\00\05\83\80\80\80"
    "\00\01\00\00\0a\8c\80\80\80\00\01\86\80\80\80\00"
    "\00\fd\08\01\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7b\03\82\80\80\80\00\01\00\05\83\80\80\80"
    "\00\01\00\00\0a\8c\80\80\80\00\01\86\80\80\80\00"
    "\00\fd\09\02\00\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7b\03\82\80\80\80\00\01\00\05\83\80\80\80"
    "\00\01\00\00\0a\8c\80\80\80\00\01\86\80\80\80\00"
    "\00\fd\0a\03\00\0b"
  )
  "type mismatch"
)
